--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -1,4 +1,5 @@
 .education {
+  margin-top: -4rem;
   background-color: var(--background-color);
   color: var(--text-color);
   padding: 4rem 1.5rem;
