--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -7,7 +7,6 @@
 
 .projects h2 {
   text-align: flex-start;
-  margin-bottom: 2rem;
   font-size: 2rem;
   color: var(--primary-color);
 }
@@ -55,6 +54,13 @@
 
 .project-card .button {
   align-self: flex-start;
+}
+
+@media (max-width: 480px) {
+  .projects h2 {
+    margin-bottom: 3.2rem;
+    text-align: center;
+  }
 }
 
 @media (min-width: 768px) {
