--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -3,13 +3,29 @@
   background-color: var(--background-color);
   color: var(--text-color);
   padding: 4rem 0;
-  scroll-margin-top: 70px;
+}
+
+@media (min-width: 480px) {
+  .skills {
+    scroll-margin-top: 80px;
+  }
+}
+
+@media (min-width: 768px) {
+  .skills {
+    scroll-margin-top: 120px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .skills {
+    scroll-margin-top: 0; /* Adjusted for desktop */
+  }
 }
 
 .skills h2 {
   text-align: flex-start;
-  margin-bottom: 2rem;
-  font-size: 3rem;
+  font-size: 2rem;
   color: var(--primary-color);
 }
 
@@ -58,7 +74,18 @@
   height: 100%;
 }
 
+@media (max-width: 480px) {
+  .skills h2 {
+    margin-bottom: 3.2rem;
+    text-align: center;
+  }
+}
+
 @media (min-width: 768px) {
+  .skills h2 {
+    margin-bottom: 3.2rem;
+  }
+
   .skills-grid {
     grid-template-columns: repeat(2, 1fr);
   }
