--- a/src/styles/Education.css
+++ b/src/styles/Education.css
@@ -3,19 +3,7 @@
   background-color: var(--background-color);
   color: var(--text-color);
   padding: 4rem 1.5rem;
-  scroll-margin-top: 50px;
-}
-
-@media (min-width: 768px) {
-  .education {
-    scroll-margin-top: 80px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .education {
-    scroll-margin-top: -1.5rem;
-  }
+  scroll-margin-top: 70px;
 }
 
 .education h2 {
@@ -76,9 +64,13 @@
   margin-right: 0.5rem;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
+  .education-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
   .education h2 {
-    text-align: center;
+    font-size: 2.5rem;
   }
 }
 
