--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -42,6 +42,38 @@
   position: relative;
 }
 
+/* OMC GROUP link with underline animation */
+.omc-group {
+  position: relative;
+  display: inline-block;
+}
+
+.omc-group a {
+  color: var(--primary-color);
+  text-decoration: none;
+  position: relative;
+  transition: color 0.3s ease;
+}
+
+.omc-group a:hover {
+  color: var(--primary-hover-color); /* Change color on hover if desired */
+}
+
+.omc-group a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  background-color: orange; /* Orange line color */
+  transition: width 0.3s ease;
+}
+
+.omc-group a:hover::after {
+  width: 100%; /* Full width on hover */
+}
+
 @media (max-width: 768px) {
   .about-wrapper {
     flex-direction: column;
@@ -70,4 +102,3 @@
     margin-bottom: -6.5rem;
   }
 }
-
