--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,11 @@
   box-sizing: border-box;
 }
 
+pre, code {
+  color: inherit; /* Prevent global text color from overriding Prism.js */
+  background: inherit; /* Prevent global background from overriding Prism.js */
+}
+
 body {
   font-family: var(--font-family);
   background-color: var(--background-color);
