--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -12,6 +12,7 @@
   color: var(--primary-color);
 }
 
+/* Grid layout */
 .projects-grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -53,28 +54,10 @@
   color: var(--text-color-light);
 }
 
+/* Project button styling */
 .project-card .button {
-  align-self: flex-start;
-}
-
-.button {
-  display: inline-block;
-  padding: 0.75rem 1.5rem;
-  border-radius: 6px; /* Smooth, rounded edges */
-  font-size: 0.9rem;
-  font-weight: 600;
-  text-align: center;
-  width: 100%; /* Make all buttons full width inside the button-group */
-  background-color: var(--button-background); /* Consistent background color for all buttons */
-  color: var(--button); /* Default text color */
-  border: none; /* Remove the white border */
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-  transition: background-color 0.2s ease, transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.button:hover {
-  background-color: var(--button-hover-background); /* Hover effect */
-  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
+  height: 45px; /* Set a fixed height for all buttons */
+  line-height: 1.5;
 }
 
 .button-group {
@@ -85,16 +68,6 @@
 
 .button-group .button {
   flex-grow: 1;
-}
-
-.project-card .button {
-  height: 45px; /* Set a fixed height for all buttons */
-  line-height: 1.5;
-}
-
-.project-card .button-group {
-  width: 100%;
-  display: flex;
 }
 
 @media (min-width: 768px) {
