--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -82,7 +82,7 @@ section {
 
 .button:focus {
   outline: none;
-  box-shadow: 0 0 0 3px rgba(98, 114, 164, 0.5); /* Focus ring */
+  box-shadow: 0 0 0 3px rgba(98, 114, 164, 0.5);
 }
 
 .card {
