--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -4,6 +4,7 @@
   background-color: var(--background-color);
   color: var(--text-color);
   padding: 4rem 1.5rem;
+  scroll-margin-top: 65px;
 }
 
 .projects h2 {
